--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <title>CocoBambu Desafio</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Bem-vindo ao Desafio CocoBambu, sua coleção de livros online!"
+    />
+    <meta name="image" content="https://i.imgur.com/wouMRvA.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
